fixed the testimonial card spacing bugs and change the intro text alignment to center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,19 +163,20 @@ footer{
     }
     #introduction-content {
         width: 100%;
+        text-align: center;
     }
     .cta {
         width: 60%;
+        margin: auto;
     }
-    #testimonial-wrapper {
-        justify-content: flex-start;
-        overflow-x:
-    min-width: 220px; auto;
-        margin-top: 5vw;
-        padding: 5vw 0 5vw 2vw;
+    .testimonial_1,
+    .testimonial_2,
+    .testimonial_3{
+        margin-top: 30px;
+        padding: 30px;
     }
-    .testimonial {
-        min-width: 80%;
+    .testimonial_3{
+         margin-bottom: 30px;
     }
     .testimonial .header {
         font-size: 6vw;
